--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="skills__container bd-grid">          
                     <div>
                         <h2 class="skills__subtitle">Profesional Skills</h2>
-                        <p class="skills__text">I possess a strong skillset in web development, encompassing HTML, CSS, JavaScript, and frameworks such as ReactJS, Node.js, Express.js, Bootstrap, and jQuery. My expertise allows me to design and develop responsive, interactive, and feature-rich web applications. I am well-versed in front-end and back-end technologies, enabling me to create seamless and efficient web solutions.</p>
+                        <p class="skills__text">I possess a strong skillset in web development, encompassing HTML, CSS, JavaScript, and frameworks such as ReactJS, Node.js, Express.js, Bootstrap, and jQuery. My expertise allows me to design and develope responsive, interactive, and feature-rich web applications. I am well-versed in front-end and back-end technologies, enabling me to create seamless and efficient web solutions.</p>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-html5 skills__icon'></i>
@@ -203,6 +203,10 @@
                     <a href="https://itsmeak03.github.io/Move-it-Movers-and-packers-website-/" class="work__img">
                         Movers and packers Website
                         <img src="assets/img/move it.jpg" alt="">
+                    </a>
+                    <a href="https://itsmeak03.github.io/Learning-ReactJS/" class="work__img">
+                        Texty-Magic a text manipulation utility
+                        <img src="assets/img/text-editor.png" alt="">
                     </a>
                 </div>
             </section>
