--- a/index.html
+++ b/index.html
@@ -208,6 +208,10 @@
                         Texty-Magic a text manipulation utility
                         <img src="assets/img/text-editor.png" alt="">
                     </a>
+                    <a href="https://itsmeak03.github.io/Resume-builder/" class="work__img">
+                        Resume-builder Website
+                        <img src="assets/img/Screenshot 2024-06-05 081157.png" alt="">
+                    </a>
                 </div>
             </section>
 
