New-skill-added

--- a/index.html
+++ b/index.html
@@ -166,6 +166,12 @@
                          <div>
                              <span class="skills__percentage">60%</span>
                          </div> </div>
+                         <div class="skills__data"> <div class="skills__names"> <i class='bx bxl-tailwind-css skills__icon'></i> <span class="skills__name">Tailwind CSS</span> </div>   <div class="skills__bar skills__js">
+                                
+                         </div>
+                         <div>
+                             <span class="skills__percentage">60%</span>
+                         </div> </div>
                     </div>
                     
                     <div>              
