movie-blog-website

--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@
                         Resume-builder Website
                         <img src="assets/img/Screenshot 2024-06-05 081157.png" alt="">
                     </a>
+                    <a href="https://github.com/itsmeAk03/Movie-Blog-Website" class="work__img">
+                        "Cinematique"-A movie blog website
+                        <img src="assets/img/cine.png" alt="">
+                    </a>
                 </div>
             </section>
 
